[build-system]
requires = ["maturin>=1.0,<2.0"] 
build-backend = "maturin"       
[project]
name = "jacs"
version = "0.8.0"
description = "JACS - JSON AI Communication Standard: Cryptographic signing and verification for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0 with Common Clause" }
authors = [
    { name = "HAI.AI", email = "engineering@hai.io" },
]
keywords = ["cryptography", "signing", "verification", "ai", "agents", "mcp", "langgraph", "langchain", "crewai", "fastapi", "data-provenance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
mcp = ["fastmcp>=0.1.0"]
hai = ["httpx>=0.24.0", "httpx-sse>=0.4.0"]
langchain = ["langchain>=1.0.0,<2.0.0"]
langgraph = ["langgraph>=1.0.0,<2.0.0"]
crewai = ["crewai>=1.9.0,<2.0.0"]
fastapi = ["fastapi>=0.115.0,<1.0.0", "starlette>=0.37.0"]
anthropic = ["anthropic>=0.79.0"]
all = ["jacs[mcp,hai,langchain,crewai,fastapi,anthropic]"]

[project.urls] 
Homepage = "https://github.com/HumanAssisted/JACS" 
Issues = "https://github.com/HumanAssisted/JACS/issues"  

[project.scripts]
jacs = "jacs.cli_runner:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.maturin]
features = ["pyo3/extension-module"] 
module-name = "jacs"  
python-source = "python" 
binding = "pyo3"  
# binaries = ["jacs"]

 