[build-system]
requires = ["maturin>=1.0,<2.0"] 
build-backend = "maturin"       
[project]
name = "jacs"
version = "0.11.2"
description = "JACS - JSON AI Communication Standard: Cryptographic signing and verification for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "HAI.AI", email = "engineering@hai.io" },
]
keywords = ["cryptography", "signing", "verification", "ai", "agents", "mcp", "langgraph", "langchain", "crewai", "fastapi", "data-provenance", "a2a", "agent-to-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
mcp = ["fastmcp>=3.2.0"]
ws = ["websockets>=13.0"]
langchain = ["langchain>=1.0.0,<2.0.0"]
langgraph = ["langgraph>=1.0.0,<2.0.0"]
crewai = ["crewai>=1.9.0,<2.0.0"]
fastapi = ["fastapi>=0.115.0,<1.0.0", "starlette>=0.37.0"]
anthropic = ["anthropic>=0.79.0"]
a2a = []
a2a-server = ["fastapi>=0.115.0,<1.0.0", "uvicorn>=0.30.0"]
# Dev extras: used by tests/test_image_signature.py (PIL) and
# tests/test_inline_text.py (PyYAML). Not required at runtime.
dev = ["pillow>=10.0.0", "pyyaml>=6.0"]
all = ["jacs[mcp,ws,langchain,langgraph,crewai,fastapi,anthropic,a2a,a2a-server]"]

[project.urls] 
Homepage = "https://github.com/HumanAssisted/JACS" 
Issues = "https://github.com/HumanAssisted/JACS/issues"  

[project.scripts]
jacs = "jacs.cli_runner:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark async tests that require an event loop",
    "contract: contract tests validating output against shared a2a-verification-result schema",
]

# Floors for transitive deps pulled in only by the optional adapter extras
# (langchain/langgraph/crewai/fastapi/anthropic/mcp) and dev tooling. The
# published wheel has no runtime dependencies (`dependencies = []`); these
# constraints exist solely to keep the dev/CI resolution (uv.lock) clear of
# known-vulnerable transitive versions. Each floor is the first patched
# release for a Dependabot advisory. chromadb (~=1.1.0, pinned by crewai) and
# diskcache have no patched release available and are addressed separately.
[tool.uv]
constraint-dependencies = [
    "aiohttp>=3.13.4",
    "Pygments>=2.20.0",
    "cryptography>=46.0.6",
    "idna>=3.15",
    "urllib3>=2.7.0",
    "requests>=2.33.0",
    "pillow>=12.2.0",
    "langchain-core>=1.3.3",
    "langsmith>=0.8.0",
    "langgraph>=1.0.10",
    "authlib>=1.6.12",
    "pyjwt>=2.12.0",
    "python-multipart>=0.0.27",
    "python-dotenv>=1.2.2",
    "uv>=0.11.6",
]

[tool.maturin]
features = ["extension-module", "agreements"]
module-name = "jacs"  
python-source = "python" 
binding = "pyo3"  
# binaries = ["jacs"]

 
