[package]
name = "jacsgo"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
resolver = "3"

[lib]
name = "jacsgo"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
jacs = { path = "../../jacs" }
serde_json = "1.0.140"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"
libc = "0.2"

[build-dependencies]
