[package]
name = "jacsgo"
version = "0.11.3"
edition = "2024"
rust-version = "1.93"
resolver = "3"
license = "Apache-2.0"

[lib]
name = "jacsgo"
crate-type = ["cdylib"]

[features]
default = ["a2a", "agreements"]
a2a = ["jacs-binding-core/a2a"]
attestation = ["jacs/attestation", "jacs-binding-core/attestation"]
agreements = ["jacs-binding-core/agreements"]

[dependencies]
lazy_static = "1.5.0"
jacs = { path = "../../jacs" }
jacs-binding-core = { path = "../../binding-core" }
serde_json = "1.0.140"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"
libc = "0.2"

[build-dependencies]
