[workspace]

[package]
name = "jacs-observability-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
jacs = { path = "../../" }
opentelemetry = "0.30.0"
opentelemetry_sdk = "0.30.0"
tracing = "0.1"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }